WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243985
Cocoa code in WebKit/Source/Platform is not available in C++ unit tests
https://bugs.webkit.org/show_bug.cgi?id=243985
Summary
Cocoa code in WebKit/Source/Platform is not available in C++ unit tests
Kimmo Kinnunen
Reported
2022-08-16 03:33:43 PDT
Cocoa code in WebKit/Source/Platform is not available in C++ unit tests
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-16 03:35:38 PDT
<
rdar://problem/98715202
>
Kimmo Kinnunen
Comment 2
2022-08-16 04:52:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3359
EWS
Comment 3
2022-08-22 23:14:22 PDT
Committed
253671@main
(154ff0da5bbd): <
https://commits.webkit.org/253671@main
> Reviewed commits have been landed. Closing PR #3359 and removing active labels.
WebKit Commit Bot
Comment 4
2022-08-23 13:34:47 PDT
Re-opened since this is blocked by
bug 244267
Ryan Haddad
Comment 5
2022-08-23 14:49:23 PDT
Reverted in
https://commits.webkit.org/253699@main
because it broke builds with PGO.
Kimmo Kinnunen
Comment 6
2022-08-25 00:11:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3644
EWS
Comment 7
2022-08-25 23:44:07 PDT
Committed
253808@main
(88d1b92d0f9f): <
https://commits.webkit.org/253808@main
> Reviewed commits have been landed. Closing PR #3644 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug