Cocoa code in Source/WebKit/Platform is not available in C++ unit tests https://bugs.webkit.org/show_bug.cgi?id=243985 rdar://problem/98715202

Reviewed by Elliott Williams.

Link Source/WebKit/Platform to libWebKitPlatform.a static library.
The C++ unit tests can then directly link to that library.

Before,
  The code in Source/WebKit/Platform/* was compiled as part
  of UnifiedSource??.cpp files.
  The objects were linked to WebKit.framework.

After,
  The code in Source/WebKit/Platform/* is compiled as part
  of PlatformUnifiedSource??.cpp files.
  The objects are linked to libWebKitPlatform.a static library.
  The static library is linked to WebKit.framework.
  The rest of the Source/WebKit code is compiled as before.

Leaves few source files in Source/WebKit/Platform/* to be compiled
directly to WebKit.framework, as those are really not part of
Source/WebKit/Platform. They are using code from other
parts of Source/WebKit.

Later on, TestIPC executable will link to libWebKitPlatform.a and include
headers directly from the Source/WebKit/Platform/* implementation path.
This way TestIPC is able to test all the IPC code.

This satisfies following requirements:
- Does not add new testing related symbols to WebKit.framework. WebKit.framework
  is required to export mostly the WK API and nothing more.
- Does not add new testing related headers to WebKit.framework public
  or private headers. WebKit.framework headers in <WebKit/> are intended
  to be the public WK headers only.
- Is able to test private, non-exported symbols of Source/WebKit/Platform/*
- The IPC code depends on rest of the WebKit/Platform code, and as such
  requires libWebKitPlatform as opposed to hypothetical libWebKitIPC.

Uses a new unified source list in Source/WebKit/Platform/Sources*.txt to
define the WebKitPlatform "component". This keeps all platforms in sync,
regardless whether they build the libWebKitPlatform.a separately or not.

Fixes few unified build include omissions.

* Source/WTF/Scripts/generate-unified-source-bundles.rb:
* Source/WebKit/CMakeLists.txt:
* Source/WebKit/Platform/IPC/StreamConnectionBuffer.cpp:
* Source/WebKit/Platform/IPC/StreamConnectionBuffer.h:
* Source/WebKit/Platform/Sources.txt: Added.
* Source/WebKit/Platform/SourcesCocoa.txt: Added.
* Source/WebKit/Platform/cocoa/SharedMemoryCocoa.cpp:
(WebKit::SharedMemory::Handle::setOwnershipOfMemory const):
* Source/WebKit/PlatformMac.cmake:
* Source/WebKit/Scripts/generate-unified-sources.sh:
* Source/WebKit/Sources.txt:
* Source/WebKit/SourcesCocoa.txt:
* Source/WebKit/UnifiedSources-output.xcfilelist:
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Source/WebKit/Configurations/WebKitPlatform.xcconfig: Added.

Canonical link: https://commits.webkit.org/253671@main