Source/WebKit/Platform/IPC/StreamConnectionBuffer.cpp
@@ -26,6 +26,7 @@
 #include "config.h"
 #include "StreamConnectionBuffer.h"
 
+#include "Decoder.h"
 #include "WebCoreArgumentCoders.h"
 
 namespace IPC {
