Source/WebKit/PlatformMac.cmake
@@ -38,6 +38,8 @@ endif ()
 
 list(APPEND WebKit_UNIFIED_SOURCE_LIST_FILES
     "SourcesCocoa.txt"
+
+    "Platform/SourcesCocoa.txt"
 )
 
 list(APPEND WebKit_SOURCES
